fix: Optionsを置き換えるように